flux/infra/longhorn/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-web-route
  namespace: longhorn
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - longhorn.tartarus.us

  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
