flux/infra/longhorn/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lonhorn-ui
  namespace: longhorn
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.tartarus.us`)
      kind: Rule
      services:
        - name: longhorn-frontend
          kind: Service
          port: 80
      middlewares:
        - name: https-redirect-middleware
          namespace: longhorn

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
